Fix ticket box overflow

--- a/css/ball/2024/main.scss
+++ b/css/ball/2024/main.scss
@@ -200,6 +200,7 @@ body {
     .ticket-buttons {
       text-align: center;
       display: flex;
+      flex-flow: row wrap;
       justify-content: space-around;
     }
   }
